--- a/package.json
+++ b/package.json
@@ -17,11 +17,20 @@
   },
   "homepage": "https://github.com/sevenCon/gulp-demos#readme",
   "devDependencies": {
+    "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp.spritesmith": "^6.3.0",
     "html-webpack-plugin": "^2.28.0",
+    "require-css-preloader": "^0.1.1",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
+  },
+  "dependencies": {
+    "css-loader": "^0.26.2",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.2"
   }
 }
